# metacpp

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  metacpp-config.cmake.in  metacpp.pc  package.cmake  vcpkg-configuration.json  vcpkg.json
docker/: build.sh  gtest.sh  jsoncpp.sh  patex.sh  run.sh
include/metacpp/: json.h  meta.h  njson.h  traits.h  xml.h
ports/metacpp/: portfile.cmake
t/: Makefile  getter_setter.cpp  json.cpp  njson.cpp  serialization.cpp  serialize.cpp  test.cpp  xml.cpp
